fix: Update grays for better contrast

--- a/frappe/public/scss/desk/css_variables.scss
+++ b/frappe/public/scss/desk/css_variables.scss
@@ -23,6 +23,7 @@ $input-height: 28px !default;
 	--navbar-bg: white;
 	--fg-hover-color: var(--gray-100);
 	--card-bg: var(--fg-color);
+	--disabled-text-color: var(--gray-700);
 	--control-bg: var(--gray-100);
 	--control-bg-on-gray: var(--gray-200);
 	--awesomebar-focus-bg: var(--fg-color);
