--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -26,6 +26,7 @@
 	--navbar-bg: var(--gray-800);
 	--fg-hover-color: var(--gray-700);
 	--card-bg: var(--gray-800);
+	--disabled-text-color: var(--gray-400);
 	--control-bg: var(--gray-700);
 	--control-bg-on-gray: var(--gray-800);
 	--awesomebar-focus-bg: var(--control-bg);
